--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
+    "mongodb": "^6.10.0",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.18"
   }
